<resources>
    <string name="app_name">Minha Caloria</string>
    <string name="app_name_br">Minha
        Caloria</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTRAR</string>
    <string name="txtSenha">Senha:</string>
    <string name="hint_mail">usuario@email.com</string>
    <string name="txtEmail">Email:</string>
    <string name="hint_pass">*****************</string>
    <string name="cancel">CANCELAR</string>
    <string name="txtName">Nome:</string>
    <string name="hint_name">ex: João Silva</string>
    <string name="txtSex">Sexo:</string>
    <string name="peso">Peso:</string>
    <string name="height">Altura:</string>
    <string name="hint_peso">Kg</string>
    <string name="hint_height">cm</string>
    <string name="objetivo">Objetivo:</string>
    <string name="idade">Idade:</string>
    <string name="hint_email">00</string>
    <string name="logo_sidebar_description">Sidebar App Logo</string>

    <string-array name="gender">
        <item>-</item>
        <item>M</item>
        <item>F</item>
    </string-array>

    <string-array name="objective">
        <item>Selecione</item>
        <item>Ganhar</item>
        <item>Manter</item>
        <item>Perder</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnAtualizarText">Atualizar Dados</string>
    <string name="meta">Meta atual: %s Kcal</string>
    <string name="metaAnt">Meta Anterior: %s Kcal</string>
    <string name="dataAtualizacao">Ultima Atualização: %s</string>
    <string name="dow_date_diary">%s</string>
    <string name="meta_diaria">%s/%s</string>

</resources>