<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hookers_green"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputRegisterMail"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hint_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRegisterName"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="17dp"
        android:text="@string/txtEmail"
        app:layout_constraintBottom_toTopOf="@+id/inputRegisterMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRegisterName" />

    <EditText
        android:id="@+id/inputRegisterName"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="22dp"
        android:text="@string/txtName"
        app:layout_constraintBottom_toTopOf="@+id/inputRegisterName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputRegisterSenha"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRegisterMail"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="17dp"
        android:text="@string/txtSenha"
        app:layout_constraintBottom_toTopOf="@+id/inputRegisterSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRegisterMail" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="17dp"
        android:text="@string/peso"
        app:layout_constraintBottom_toTopOf="@+id/inputWeight"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/inputRegisterSenha"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="17dp"
        android:text="@string/txtSex"
        app:layout_constraintBottom_toTopOf="@+id/spinnerRegisterSelectSex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRegisterSenha" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="184dp"
        android:text="@string/objetivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWeight" />

    <EditText
        android:id="@+id/inputHeight"
        android:layout_width="71dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/hint_height"
        android:inputType="text|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/inputWeight"
        app:layout_constraintTop_toBottomOf="@+id/inputRegisterSenha"
        tools:ignore="Autofill" />

    <Spinner
        android:id="@+id/spinnerRegisterSelectObj"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginEnd="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="17dp"
        android:text="@string/idade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRegisterSelectSex" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="71dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/hint_peso"
        android:inputType="text|number"
        app:layout_constraintStart_toEndOf="@+id/spinnerRegisterSelectSex"
        app:layout_constraintTop_toBottomOf="@+id/inputRegisterSenha"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/inputRegisterAge"
        android:layout_width="71dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="text|number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="Autofill" />

    <Spinner
        android:id="@+id/spinnerRegisterSelectSex"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@+id/inputWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRegisterSenha" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="17dp"
        android:text="@string/height"
        app:layout_constraintBottom_toTopOf="@+id/inputHeight"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/inputRegisterSenha"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="184dp"
        android:layout_height="107dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:lines="2"
        android:text="@string/app_name_br"
        android:textColor="@color/dark_slate_grey"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegisterRegister"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="40dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegisterCancel"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="40dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>